// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can set pre/post github action job step 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Synth:
    name: Synthesize
    if: contains(fromJson('[\\"push\\", \\"pull_request\\"]'), github.event_name)
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyPrePostStack-PreDeployAction:
    name: PreDeployAction
    if: contains(fromJson('[\\"push\\", \\"pull_request\\"]'), github.event_name)
    permissions:
      contents: write
    runs-on: ubuntu-latest
    needs:
      - Build-Synth
    env: {}
    steps:
      - name: pre deploy action
        uses: my-pre-deploy-action@1.0.0
        with:
          app-id: 1234
          secrets: my-secrets
  MyPrePostStack-MyStack-Deploy:
    name: Deploy MyPrePostStackMyStack8AD5AF9E
    if: success() && contains(github.event.issue.labels.*.name, 'deploy')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Synth
      - MyPrePostStack-PreDeployAction
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyPrePostStack/MyStack
  MyPrePostStack-PostDeployAction:
    name: PostDeployAction
    if: contains(fromJson('[\\"push\\", \\"pull_request\\"]'), github.event_name)
    permissions:
      contents: write
    runs-on: ubuntu-latest
    needs:
      - MyPrePostStack-MyStack-Deploy
      - Build-Synth
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: post deploy action
        uses: my-post-deploy-action@1.0.0
        with:
          app-id: 4321
          secrets: secrets
"
`;

exports[`cloudformation stack capabilities can specify multiple capabilities 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyStack-MyStack-Deploy:
    name: Deploy MyStack098574E7
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStack/MyStack
"
`;

exports[`cloudformation stack capabilities can specify stack capabilities 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyStack-MyStack-Deploy:
    name: Deploy MyStack098574E7
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStack/MyStack
"
`;

exports[`github environment can specify multiple github environments 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyStage1-MyStack-Deploy:
    name: Deploy MyStage1MyStack61AF4CC5
    permissions:
      contents: read
      id-token: none
    environment: test
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStage1/MyStack
  MyStage2-MyStack-Deploy:
    name: Deploy MyStage2MyStack9B82AF96
    permissions:
      contents: read
      id-token: none
    environment: prod
    needs:
      - Build-Build
      - MyStage1-MyStack-Deploy
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-west-2
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::222222222222:role/cdk-hnb659fds-deploy-role-222222222222-us-west-2
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStage2/MyStack
"
`;

exports[`github stages in waves works 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    if: contains(github.event.issue.labels.*.name, 'deployToA') ||
      contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyWave-PreWaveAction:
    name: PreWaveAction
    if: contains(github.event.issue.labels.*.name, 'deployToA') ||
      contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: write
    runs-on: ubuntu-latest
    needs:
      - Build-Build
    env: {}
    steps:
      - name: pre wave action
        uses: my-pre-wave-action@1.0.0
        with:
          app-id: 1234
          secrets: my-secrets
  MyWave-MyStageA-MyStackA-Deploy:
    name: Deploy MyStageAMyStackA0F0BE321
    if: success() && contains(github.event.issue.labels.*.name, 'deployToA')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
      - MyWave-PreWaveAction
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageA/MyStackA
  MyWave-MyStageB-MyStackB-Deploy:
    name: Deploy MyStageBMyStackBFE4B1ADE
    if: success() && contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
      - MyWave-PreWaveAction
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::12345678901:role/cdk-hnb659fds-deploy-role-12345678901-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageB/MyStackB
  MyWave-PostWaveAction:
    name: PostWaveAction
    if: contains(github.event.issue.labels.*.name, 'deployToA') ||
      contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: write
    runs-on: ubuntu-latest
    needs:
      - MyWave-MyStageA-MyStackA-Deploy
      - MyWave-MyStageB-MyStackB-Deploy
      - Build-Build
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: post wave action
        uses: my-post-wave-action@1.0.0
        with:
          app-id: 4321
          secrets: secrets
"
`;

exports[`job settings can specify job settings at stage level 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyStack-MyStack-Deploy:
    name: Deploy MyStack098574E7
    if: github.repository == 'github/repo'
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStack/MyStack
"
`;

exports[`stages in github waves works 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyWave-MyStageA-MyStackA-Deploy:
    name: Deploy MyStageAMyStackA0F0BE321
    if: success() && contains(github.event.issue.labels.*.name, 'deployToA')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageA/MyStackA
  MyWave-MyStageB-MyStackB-Deploy:
    name: Deploy MyStageBMyStackBFE4B1ADE
    if: success() && contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::12345678901:role/cdk-hnb659fds-deploy-role-12345678901-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageB/MyStackB
"
`;

exports[`stages in pipeline works with \`if\` 1`] = `
"# AUTOMATICALLY GENERATED FILE, DO NOT EDIT MANUALLY.
# Generated by AWS CDK and [cdk-pipelines-github](https://github.com/cdklabs/cdk-pipelines-github)

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build-Build:
    name: Synthesize
    permissions:
      contents: read
      id-token: none
    runs-on: ubuntu-latest
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Package
        run: tar -zcf /tmp/workspace.tgz .
      - name: Upload
        uses: actions/upload-artifact@v3
        with:
          name: source
          path: /tmp/workspace.tgz
          if-no-files-found: error
  MyStageA-MyStackA-Deploy:
    name: Deploy MyStageAMyStackA0F0BE321
    if: success() && contains(github.event.issue.labels.*.name, 'deployToA')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::111111111111:role/cdk-hnb659fds-deploy-role-111111111111-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageA/MyStackA
  MyStageB-MyStackB-Deploy:
    name: Deploy MyStageBMyStackBFE4B1ADE
    if: success() && contains(github.event.issue.labels.*.name, 'deployToB')
    permissions:
      contents: read
      id-token: none
    needs:
      - Build-Build
      - MyStageA-MyStackA-Deploy
    runs-on: ubuntu-latest
    steps:
      - name: Download
        uses: actions/download-artifact@v3
        with:
          name: source
      - name: Unpackage
        run: tar -zxvf workspace.tgz
      - name: Authenticate Via GitHub Secrets
        uses: aws-actions/configure-aws-credentials@v1-node16
        with:
          aws-region: us-east-1
          role-duration-seconds: 1800
          role-skip-session-tagging: true
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          role-to-assume: arn:aws:iam::12345678901:role/cdk-hnb659fds-deploy-role-12345678901-us-east-1
          role-external-id: Pipeline
      - id: Deploy
        run: npx cdk deploy MyStageB/MyStackB
"
`;
